ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-name
  namespace: staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: yourdomain.com
      http:
        paths:
          - path: /demoPage/(.*)
            pathType: Prefix
            backend:
              service:
                name: svc-name
                port:
                  number: 35014
  ingressClassName: nginx
